Thêm giao diện page đang bảo trì

--- a/src/index.html
+++ b/src/index.html
@@ -13,5 +13,43 @@
 </head>
 <body class="mat-typography">
   <app-root></app-root>
+
+  <!-- =====================Under Maintenence Page======================= -->
+  <!-- <div style="text-align: center; padding-top: 165px">
+    <img style="
+      width: 542px;
+      height: 387px;"  
+      src="./assets/img/ec-bao-tri.jpg" alt="">
+    <div style="
+      height: 30px;
+      top: 589px;
+      left: 795px;
+      text-align: center;
+    ">
+      <div
+        style="
+        color: #106DB6;
+        font-size: 24px;
+        font-weight: 400;
+        line-height: 30px;
+        letter-spacing: 0px;
+        padding-bottom: 8px;
+        text-align: center;"
+      >
+        Hệ thống đang được bảo trì!
+      </div>
+      <div
+        style="
+          color: #94A7C6;
+          font-size: 14px;
+          font-weight: 400;
+          line-height: 18px;
+          text-align: center;
+          letter-spacing: 0px;"
+        >
+        Vui lòng quay lại sau 30 phút nữa.
+      </div>
+    </div>
+  </div>  -->
 </body>
 </html>
