--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" crossorigin="anonymous"> -->
 </head>
-<body class="mat-typography">
+<body class="mat-typography" style="background-color: var(--BG, #F3F6FA);">
   <app-root></app-root>
 
   <!-- =====================Under Maintenence Page======================= -->
