add css global table

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
   <title>Mobifone eContract</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,100italic,300italic,400italic,500italic,500,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
   <!-- <link rel="icon" type="image/x-icon" href="favicon.ico"> -->
   <!-- <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet" crossorigin="anonymous">
@@ -18,7 +19,7 @@
   <!-- <div style="text-align: center; padding-top: 165px">
     <img style="
       width: 542px;
-      height: 387px;"  
+      height: 387px;"
       src="./assets/img/ec-bao-tri.jpg" alt="">
     <div style="
       height: 30px;
