feat: tích hợp google analytic

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,14 @@
   <!-- <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" crossorigin="anonymous"> -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-FX0NLN13RT"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    
+    gtag('config', 'G-FX0NLN13RT');
+  </script>
 </head>
 <body class="mat-typography" style="background-color: var(--BG, #F3F6FA);">
   <app-root></app-root>
