fix: tích hợp gg analytic với site Nội bộ

--- a/src/index.html
+++ b/src/index.html
@@ -11,14 +11,50 @@
   <!-- <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" crossorigin="anonymous"> -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-FX0NLN13RT"></script>
+  
+  <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-FX0NLN13RT"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
     
     gtag('config', 'G-FX0NLN13RT');
-  </script>
+  </script> -->
+
+<script>
+  (function() {
+    var environmentFlag = enviroment.flag; 
+
+    if (environmentFlag === 'KD') {
+      var scriptkd = document.createElement('script');
+      scriptkd.src = 'https://www.googletagmanager.com/gtag/js?id=G-FX0NLN13RT';
+      scriptkd.async = true;
+      document.head.appendChild(scriptkd);
+
+      scriptkd.onload = function() {
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { window.dataLayer.push(arguments); }
+        window.gtag = gtag;
+        gtag('js', new Date());
+        gtag('config', 'G-FX0NLN13RT');
+      };
+    } else if (environmentFlag === 'NB') {
+      var scriptnb = document.createElement('script');
+      scriptnb.src = 'https://www.googletagmanager.com/gtag/js?id=G-GCR9VV08WD';
+      scriptnb.async = true;
+      document.head.appendChild(scriptnb);
+
+      scriptnb.onload = function() {
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { window.dataLayer.push(arguments); }
+        window.gtag = gtag;
+        gtag('js', new Date());
+        gtag('config', 'G-GCR9VV08WD');
+      };
+    }
+  })();
+</script>
+
 </head>
 <body class="mat-typography" style="background-color: var(--BG, #F3F6FA);">
   <app-root></app-root>
