fix: cập nhật xử lý index.html để cấu hình gg analytic với site nb

--- a/src/index.html
+++ b/src/index.html
@@ -22,37 +22,38 @@
   </script> -->
 
 <script>
-  (function() {
-    var environmentFlag = enviroment.flag; 
 
-    if (environmentFlag === 'KD') {
-      var scriptkd = document.createElement('script');
-      scriptkd.src = 'https://www.googletagmanager.com/gtag/js?id=G-FX0NLN13RT';
-      scriptkd.async = true;
-      document.head.appendChild(scriptkd);
+  window.addEventListener('load', function() {
+      var environmentFlag = window.environmentFlag; // Lấy giá trị từ biến toàn cục
 
-      scriptkd.onload = function() {
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { window.dataLayer.push(arguments); }
-        window.gtag = gtag;
-        gtag('js', new Date());
-        gtag('config', 'G-FX0NLN13RT');
-      };
-    } else if (environmentFlag === 'NB') {
-      var scriptnb = document.createElement('script');
-      scriptnb.src = 'https://www.googletagmanager.com/gtag/js?id=G-GCR9VV08WD';
-      scriptnb.async = true;
-      document.head.appendChild(scriptnb);
+      if (environmentFlag === 'KD') {
+        var scriptkd = document.createElement('script');
+        scriptkd.src = 'https://www.googletagmanager.com/gtag/js?id=G-FX0NLN13RT';
+        scriptkd.async = true;
+        document.head.appendChild(scriptkd);
 
-      scriptnb.onload = function() {
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { window.dataLayer.push(arguments); }
-        window.gtag = gtag;
-        gtag('js', new Date());
-        gtag('config', 'G-GCR9VV08WD');
-      };
-    }
-  })();
+        scriptkd.onload = function() {
+          window.dataLayer = window.dataLayer || [];
+          function gtag() { window.dataLayer.push(arguments); }
+          window.gtag = gtag;
+          gtag('js', new Date());
+          gtag('config', 'G-FX0NLN13RT');
+        };
+      } else if (environmentFlag === 'NB') {
+        var scriptnb = document.createElement('script');
+        scriptnb.src = 'https://www.googletagmanager.com/gtag/js?id=G-GCR9VV08WD';
+        scriptnb.async = true;
+        document.head.appendChild(scriptnb);
+
+        scriptnb.onload = function() {
+          window.dataLayer = window.dataLayer || [];
+          function gtag() { window.dataLayer.push(arguments); }
+          window.gtag = gtag;
+          gtag('js', new Date());
+          gtag('config', 'G-GCR9VV08WD');
+        };
+      }
+    });
 </script>
 
 </head>
